@@ -150,6 +150,8 @@
      messages, etc.); bz #1329 ok dtucker@
   - (dtucker) [clientloop.c serverloop.c]  channel_register_filter now
     takes 2 more args.  with djm@
+  - (dtucker) [defines.h] Bug #1112: __dead is, well dead. Based on a patch
+    from Todd Vierling.
 
 20080611
  - (djm) [channels.c configure.ac]
@@ -4312,4 +4314,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4995 2008/06/13 00:24:03 dtucker Exp $
+$Id: ChangeLog,v 1.4996 2008/06/13 00:28:57 dtucker Exp $
